--- a/bioskop.html
+++ b/bioskop.html
@@ -5,29 +5,26 @@
     <title>Beogradski bioskopi</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta author="Borisav Bogdanovic">
+    <meta name="author" content="Borisav Bogdanovic">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
-
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
+        <a class="navbar-brand text-white" href="index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link text-white" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link text-white"
                         href="http://klikapartmani.com/bioskopi-beograd-lokacije-informacije/"
                         target="_blank">Bioskopi</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link text-white" href="https://www.fest.rs/Naslovna" target="_blank">FEST 2019</a>
                 </li>
                 <li class="nav-item">
@@ -49,16 +46,9 @@
                     </div>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item" style="right: 0;">
-                    <a class="nav-link text-white" href="#About" target="_blank">O nama</a>
-                </li>
-            </ul>
+
         </div>
     </nav>
-    <!-- <div id="naslov">
-            <h1 class="text-center font-weight-bold">Vodič kroz Beogradske bioskope</h1>
-        </div> -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4 text-center font-weight-bold">Vodič kroz Beogradske bioskope</h1>
@@ -73,31 +63,32 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/bio/aquaman_wide.jpg" class="d-block w-100" alt="Aquaman">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/bio/replicas1024x576.jpg" class="d-block w-100" alt="Replicas">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/bio/ladies-in-black1450x500.jpg" class="d-block w-100" alt="Ladies in Black">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/bio/us1651x702.jpg" class="d-block w-100" alt="us">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/bio/psi870x433.png" class="d-block w-100" alt="Psi umiru sami">
-                </div>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/bio/aquaman_wide.jpg" class="d-block w-100" alt="Aquaman">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="carousel-item">
+                <img src="img/bio/replicas1024x576.jpg" class="d-block w-100" alt="Replicas">
+            </div>
+            <div class="carousel-item">
+                <img src="img/bio/ladies-in-black1450x500.jpg" class="d-block w-100" alt="Ladies in Black">
+            </div>
+            <div class="carousel-item">
+                <img src="img/bio/us1651x702.jpg" class="d-block w-100" alt="us">
+            </div>
+            <div class="carousel-item">
+                <img src="img/bio/psi870x433.png" class="d-block w-100" alt="Psi umiru sami">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </section>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -132,7 +123,7 @@
             Takođe prikazaće se aktuelni filmovi kao što su Led sa Milošem Bikovićem, Izdaja sa Alisijom Vikander,
             Spilbergov film Ready Player One, Bitka za pacifik, Kuća duhova i dr.
         </div>
-        <img src="img/bio/cineplexx.jpg" class="ml-3" alt="Cineplexx">
+        <img src="img/bio/cineplexx.jpg" class="align-self-center ml-3" alt="Cineplexx">
     </div>
     <br>
     <div class="media" style="padding-left: 30px; padding-right: 50px;">
@@ -178,7 +169,7 @@
     <div class="media" style="padding-left: 30px; padding-right: 50px;">
         <img src="img/bio/akademija-28.jpg" class="align-self-center mr-3" alt="juzni vetar">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
-            <h6 class="mt-0">Akademija 28 - nemanjina 28, Beograd</h6>
+            <h6 class="mt-0">Akademija 28 - Nemanjina 28, Beograd</h6>
             <p></p>
             <p class="mb-0">Akademija 28 bioskop u Beogradu nalazi se na uglu Nemanjine i ulice Svetozara Markovića,
                 naspram parka Manjež u samom centru grada, nadomak trga Slavija. Akademija 28 nije samo bioskop već i
@@ -342,73 +333,92 @@
             <h6>BIOSKOP PARTIZAN</h6>
 
             <p>Bioskop Partizan zatvoren je početkom 2004.godine a nalazio se preko puta Železničke stanice. Tokom
-            devedesetih
-            u njemu su se prikazivali isključivo borilački filmovi ili ti tada poznati žanr karate filmovi. Filmovi su
-            uglavnom bili iz kineske produkcije a u nekoliko navrata znalo se da se na repertoaru nadju i filmovi o
-            „Godzili“ . Svi filmovi Brus Lija tu su se mogli odgledati. Na ulazu u bioskop bili su automati sa raznim
-            igricama i fliperima koji su punili bioskop pored svojih redovnih repertoara. Međutim,tokom vremena bioskop
-            je
-            prestao sa prikazivanjem karate filmova pa su se u tom bioskopu uglavnom mogli odgledati erotski filmovi.
+                devedesetih
+                u njemu su se prikazivali isključivo borilački filmovi ili ti tada poznati žanr karate filmovi. Filmovi
+                su
+                uglavnom bili iz kineske produkcije a u nekoliko navrata znalo se da se na repertoaru nadju i filmovi o
+                „Godzili“ . Svi filmovi Brus Lija tu su se mogli odgledati. Na ulazu u bioskop bili su automati sa
+                raznim
+                igricama i fliperima koji su punili bioskop pored svojih redovnih repertoara. Međutim,tokom vremena
+                bioskop
+                je
+                prestao sa prikazivanjem karate filmova pa su se u tom bioskopu uglavnom mogli odgledati erotski
+                filmovi.
 
-            Bioskop je bio na „ulici“ na lošem glasu jer su znali neki da započnu i tuče pre projekcije filma a stariji
-            sugrađani sigurno pamte kada su projekcije u određenim terminima otkazivane ili vraćane pare jer je došlo do
-            tuče. Takođe je bio mesto okupljanja dilera,makroa,narkomana i ostalog „čudnog“ sveta.</p>
+                Bioskop je bio na „ulici“ na lošem glasu jer su znali neki da započnu i tuče pre projekcije filma a
+                stariji
+                sugrađani sigurno pamte kada su projekcije u određenim terminima otkazivane ili vraćane pare jer je
+                došlo do
+                tuče. Takođe je bio mesto okupljanja dilera,makroa,narkomana i ostalog „čudnog“ sveta.</p>
 
             <h6>BIOSKOP BALKAN</h6>
 
             <p>Bisokop Balkan nalazi se u Braće Jugovića 16. Zatvoren je 2010.godine i bilo je nekoliko najava da će se
-            otvoriti 2020.godine ali pokazaće vreme. Ovaj bioskop ima bogatu istoriju pa se mnogi trude da ga opet vrate
-            svojoj nameni. U njemu su se prikazivala filmska ostvarenja od umetničkog značaja. Prikazivala su se domaća
-            i
-            strana ostvarenja.</p>
+                otvoriti 2020.godine ali pokazaće vreme. Ovaj bioskop ima bogatu istoriju pa se mnogi trude da ga opet
+                vrate
+                svojoj nameni. U njemu su se prikazivala filmska ostvarenja od umetničkog značaja. Prikazivala su se
+                domaća
+                i
+                strana ostvarenja.</p>
 
             <h6>BIOSKOP SLAVICA</h6>
 
-            <p>Biskop Slavica nalazio se na Karaburmi.Naziv je dobio po prvom posleratnom istoimenom filmu. Bioskop je imao
-            raznovrstan filmski program i zatvoren je još devedesetih godina prošlog veka.</p>
+            <p>Biskop Slavica nalazio se na Karaburmi.Naziv je dobio po prvom posleratnom istoimenom filmu. Bioskop je
+                imao
+                raznovrstan filmski program i zatvoren je još devedesetih godina prošlog veka.</p>
 
             <h6>BIOSKOP VOŽDOVAC</h6>
 
             <p>Bioskop Voždovac nalazio se u ulici Kralja Vladimira i zatvoren je 1997.godine. I ovaj bioskop poput
-            bioskopa
-            Slavica imao je raznovrstan filmski program iz kojeg su potekle mnoge beogradske ljubavne priče koje su se
-            prepričavale po Beogradu. Ako si hteo da izvedeš devojku u bioskop,što je bio deo izlazaka u to vreme,
-            uglavnom
-            je to bioskop Voždovac u nadi da ćeš postati deo urbane beogradske ljubavne priče.</p>
+                bioskopa
+                Slavica imao je raznovrstan filmski program iz kojeg su potekle mnoge beogradske ljubavne priče koje su
+                se
+                prepričavale po Beogradu. Ako si hteo da izvedeš devojku u bioskop,što je bio deo izlazaka u to vreme,
+                uglavnom
+                je to bioskop Voždovac u nadi da ćeš postati deo urbane beogradske ljubavne priče.</p>
 
             <h6>BIOSKOP KOZARA</h6>
 
             <p>Bioskop Kozara nalazio se u Bezistanu i bio je kultni bioskop Beograda. Premijere velikih filmskih
-            ostvarenja
-            prikazivale su se u Domu sindikata i bioskopu Kozara. Doći do karata je bilo skoro uzaludno. Čak i nakon
-            premijere nedeljama nije bilo moguće doći do karata od jutarnjih termina pa do večernjih. Kozara je bila raj
-            za „tapkaroše“ koji su zarađivali velike sume novca ukoliko bi uspeli da kupe karte pre svih a pričalo se da su
-            otkupljivali sve karte „preko veze“ i ako si mogao maksimalno da kupiš 4 karte.</p>
+                ostvarenja
+                prikazivale su se u Domu sindikata i bioskopu Kozara. Doći do karata je bilo skoro uzaludno. Čak i nakon
+                premijere nedeljama nije bilo moguće doći do karata od jutarnjih termina pa do večernjih. Kozara je bila
+                raj
+                za „tapkaroše“ koji su zarađivali velike sume novca ukoliko bi uspeli da kupe karte pre svih a pričalo
+                se da su
+                otkupljivali sve karte „preko veze“ i ako si mogao maksimalno da kupiš 4 karte.</p>
 
             <h6>BIOSKOP 20.OKTOBAR</h6>
 
             <p>Bioskop 20.oktobar nalazio se u Balkanskoj ulici preko puta hotela Moskav. Pored Kozare bio je jedan od
-                kultnih bioskopa u kojem su se prikazivali uglavnom akcioni filmovi,trileri i borilački filmovi. Bioskop je imao
-                dve dvorane u kojima su se prikazivali različiti filmovi pa su neki koristili priliku kada redar nije tu da
-                plate jedan film a posle da se ušunjaju u drugu dvoranu. I tu su „tapkaroši “ znali da profitiraju kada je
+                kultnih bioskopa u kojem su se prikazivali uglavnom akcioni filmovi,trileri i borilački filmovi. Bioskop
+                je imao
+                dve dvorane u kojima su se prikazivali različiti filmovi pa su neki koristili priliku kada redar nije tu
+                da
+                plate jedan film a posle da se ušunjaju u drugu dvoranu. I tu su „tapkaroši “ znali da profitiraju kada
+                je
                 bilo dobrih filmova a u to vreme bilo ih je u izobilju.
 
                 Beograd je nekada bio prestonica bioskopa gde su se u određenim bioskopima pokazivali određeni žanrovi
-                ili bili određeni za premijere velikih hitova. Pored navednih bioskopa o kojima se može puno pričati tu su bili i
+                ili bili određeni za premijere velikih hitova. Pored navednih bioskopa o kojima se može puno pričati tu
+                su bili i
                 bioskopi: „Sloboda“,“Jedinstvo“, „Sutjeska“,“Avala“…
 
                 Zatvaranje Kozare i 20.oktobra je ono što sigurno će zauvek „boleti“ nas starije jer kultna mesta koja
-                su stvarala istoriju su stala sa svojom istorijom. Kada istorija stane koju istoriju mladost može nastaviti
+                su stvarala istoriju su stala sa svojom istorijom. Kada istorija stane koju istoriju mladost može
+                nastaviti
                 da stvara i održava.</p>
-                <div class="row">
-                        <img src="img/bio/zabbalkan.jpg" class="align-self-center ml-3" alt="teret">
-                        <img src="img/bio/zabkosmaj.jpg" class="align-self-center ml-3" alt="teret">
-                        <img src="img/bio/zabdodjijuce.jpg" class="align-self-center ml-3" alt="teret">
-                        <img src="img/bio/zabzvezda.jpg" class="align-self-center ml-3" alt="teret">
+            <div class="row">
+                <img src="img/bio/zabbalkan.jpg" class="align-self-center ml-3" alt="teret">
+                <img src="img/bio/zabkosmaj.jpg" class="align-self-center ml-3" alt="teret">
+                <img src="img/bio/zabdodjijuce.jpg" class="align-self-center ml-3" alt="teret">
+                <img src="img/bio/zabzvezda.jpg" class="align-self-center ml-3" alt="teret">
 
-                </div>    
+            </div>
         </div>
     </section>
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -418,11 +428,9 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
 
-
-    </script>
 </body>
 
 </html>
