--- a/index.html
+++ b/index.html
@@ -5,45 +5,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Kulturni vodič kroz Beograd</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="../bootstrap/css/bootstrap"> -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
-
+  <link rel="shortcut icon" href="img/bb.png" />
 </head>
 
 <body>
   <div id="container">
     <div id="naslov">
-      <h1>Културни Водич Кроз Београд</h1>
+      <div id="animacija">
+        <img src="img/bb.png" alt="logo">
+      </div>
+      <h3>Културни Водич Кроз Београд</h3>
     </div>
     <div id="navbar">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="bioskop.html">Биоскопи</a></li>
+        <li><a href="pozoriste.html">Позоришта</a></li>
+        <li><a href="koncerti.html">Концерти</a></li>
+        <li><a href="http://www.urbanbug.net/kalendar-desavanja/umetnost-i-kultura" target="_blank">Актуелно</a></li>
 
+        <li style="float:right"><a href="#">O Nama</a></li>
+      </ul>
     </div>
     <div id="main">
       <div id="karta1" class="karta">
-        <a href="bioskop.html" target="_blank"><img alt="bioskop" src="img/bioskop1.jpg"></a>
-        <br> <b>Биоскопи</b>
+        <p><b>Водич кроз биоскопе</b></p>
+        <a href="bioskop.html"><img alt="bioskop" src="img/bioskop1.jpg"></a>
+        <br>
       </div>
-      <div id="karta2" class="karta">  
-        <a href="pozoriste.html" target="_blank"><img alt="pozoriste" src="img/pozoriste1.jpg"></a>
-        <p><b>Позоришта</b></p>
+      <div id="karta2" class="karta">
+          <p><b>Водич кроз позоришта</b></p>
+        <a href="pozoriste.html"><img alt="pozoriste" src="img/pozoriste1.jpg"></a>
+
       </div>
-      <div id="karta3" class="karta"><b>Muzeji</b>
-        <a href="muzej.html" target="_blank"><img alt="muzej" src="img/muzej1.jpg"></a>
+      <div id="karta3" class="karta">
+        <p><b>Водич за концерте</b></p>
+        <a href="muzej.html"><img alt="muzej" src="img/koncert1.jpg"></a>
+        
       </div>
-      <div id="karta4" class="karta"><b>Kreiraj</b>
-        <a href="kreiraj.html" target="_blank"><img alt="kreiraj" src="img/kreiraj.jpg"></a>
+      <div id="karta4" class="karta">
+        <p><b>Креирајте свој догађај</b></p>
+        <a href="kreiraj.html"><img alt="kreiraj" src="img/kreiraj1.png"></a>
+       
       </div>
-      <div id="vesti">
+      <!-- <div id="vesti">
         VESTI
-      </div>
+      </div> -->
     </div>
     <div id="aside">
-      Aktuelnosti
+      <iframe width="320" height="180" src="https://www.youtube.com/embed/8qgJLMK9q4c" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="320" height="180" src="https://www.youtube.com/embed/vxbD71LWau0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="320" height="180"       src="https://www.youtube.com/embed/SSp_mJQR3Z0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div>
     <div id="footer">
-      FOOTER
+      <img src="img/bb-logo.png" alt="logo">
+      <span>&copy; Борисав Богдановић 2018</span>
     </div>
   </div>
 </body>
