--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kulturni vodič kroz Beograd</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="../bootstrap/css/bootstrap"> -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
   <link rel="shortcut icon" href="img/bb.png" />
+  
 </head>
 
 <body>
@@ -25,10 +26,10 @@
         <li><a href="#home">Home</a></li>
         <li><a href="bioskop.html">Биоскопи</a></li>
         <li><a href="pozoriste.html">Позоришта</a></li>
-        <li><a href="koncerti.html">Концерти</a></li>
+        <li><a href="muzej.html">Музеји</a></li>
         <li><a href="http://www.urbanbug.net/kalendar-desavanja/umetnost-i-kultura" target="_blank">Актуелно</a></li>
 
-        <li style="float:right"><a href="#">O Nama</a></li>
+        <li style="float:right"><a href="kreiraj.html" target="_blank">Креирај догађај</a></li>
       </ul>
     </div>
     <div id="main">
@@ -38,31 +39,30 @@
         <br>
       </div>
       <div id="karta2" class="karta">
-          <p><b>Водич кроз позоришта</b></p>
+        <p><b>Водич кроз позоришта</b></p>
         <a href="pozoriste.html"><img alt="pozoriste" src="img/pozoriste1.jpg"></a>
 
       </div>
       <div id="karta3" class="karta">
-        <p><b>Водич за концерте</b></p>
-        <a href="muzej.html"><img alt="muzej" src="img/koncert1.jpg"></a>
-        
+        <p><b>Водич кроз музеје</b></p>
+        <a href="muzej.html"><img alt="muzej" src="img/muzej3.jpg"></a>
+
       </div>
       <div id="karta4" class="karta">
         <p><b>Креирајте свој догађај</b></p>
         <a href="kreiraj.html"><img alt="kreiraj" src="img/kreiraj1.png"></a>
-       
+
       </div>
-      <!-- <div id="vesti">
-        VESTI
-      </div> -->
     </div>
     <div id="aside">
-      <iframe width="320" height="180" src="https://www.youtube.com/embed/8qgJLMK9q4c" frameborder="0"
+      <video width="320" height="180" controls>
+        <source src="vid/Beograd vikendi.mp4" type="video/mp4"></video>
+      <iframe width="320" height="180" src="https://www.youtube.com/embed/SSp_mJQR3Z0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe width="320" height="180" src="https://www.youtube.com/embed/vxbD71LWau0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe width="320" height="180"       src="https://www.youtube.com/embed/SSp_mJQR3Z0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <video width="320" height="180" controls>
+        <source src="vid/Kultura_FEST.mp4" type="video/mp4"></video>
+
 
     </div>
     <div id="footer">
